:bug: Fix messages z-index issue.
Happens when modals and messages are visible
in the same time.

--- a/frontend/resources/styles/common/framework.scss
+++ b/frontend/resources/styles/common/framework.scss
@@ -1155,7 +1155,7 @@ input[type=range]:focus::-ms-fill-upper {
     padding-left: 16px;
     top: 16px;
     right: 16px;
-    z-index: 13;
+    z-index: 1005;
 
     display: flex;
     align-items: center;
